# 10-Academy-Week-0

./: .gitignore  Makefile  README.md  Untitled.ipynb  pyproject.toml  requirements.txt
backend/: app.py
db_schemas/: All features schema.sql  Creaing db tables using python.ipynb  EDA Task-1 Features db.ipynb  EDA Task-1.sql  ML model.sql  NoSQL Monog data insertion.ipynb  Time based analysis Task-2.sql
db_schemas/Notebooks inserting in db/: EDA.ipynb  ML model task2.ipynb  Time difference analysis.ipynb
frontend/slack-data/: package-lock.json  package.json  tailwind.config.js
frontend/slack-data/src/: App.jsx
frontend/slack-data/src/components/: AreaChartCard.jsx  ChannelAnalyticsCard.jsx  LeftColumn.jsx  Navbar.jsx  RightColumn.jsx  SentimentCard.jsx  TableCard.jsx
mlflow_logs/artifacts/: lda_model.pkl  vectorizer.pkl
notebooks/: Copy of EDA-Twitter.ipynb  EDA.ipynb  ML model task2.ipynb  Modeling_Twitter.ipynb  Time difference analysis.ipynb  Untitled.ipynb  mongod.ipynb  parse_slack_data.ipynb  schema_tutorial.ipynb
src/: config.py  loader.py  utils.py
tests/: test_loader_channel_messages_columns.py  test_loader_channels_columns.py  test_loader_users_columns copy.py
