[tool.poetry]
name = "10-academy-week-0"
version = "0.1.0"
description = "Slack Network analysis"
authors = ["Abel Bekele <abelbekele.addise@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
